--- a/Codes/Parameter_Tuning.ipynb
+++ b/Codes/Parameter_Tuning.ipynb
@@ -57,7 +57,38 @@
       "epoch 1  | loss: 1.06371 | val_0_logloss: 1.15692 |  0:00:13s\n",
       "epoch 2  | loss: 0.86789 | val_0_logloss: 1.03761 |  0:00:19s\n",
       "epoch 3  | loss: 0.73597 | val_0_logloss: 0.97414 |  0:00:26s\n",
-      "epoch 4  | loss: 0.65794 | val_0_logloss: 0.76926 |  0:00:34s\n"
+      "epoch 4  | loss: 0.65794 | val_0_logloss: 0.76926 |  0:00:34s\n",
+      "epoch 5  | loss: 0.62917 | val_0_logloss: 0.60544 |  0:00:41s\n",
+      "epoch 6  | loss: 0.58016 | val_0_logloss: 0.76685 |  0:00:48s\n",
+      "epoch 7  | loss: 0.57437 | val_0_logloss: 0.64552 |  0:00:54s\n",
+      "epoch 8  | loss: 0.53174 | val_0_logloss: 0.55973 |  0:01:00s\n",
+      "epoch 9  | loss: 0.5333  | val_0_logloss: 0.99283 |  0:01:06s\n",
+      "epoch 10 | loss: 0.54206 | val_0_logloss: 0.62791 |  0:01:13s\n",
+      "epoch 11 | loss: 0.54018 | val_0_logloss: 1.40442 |  0:01:19s\n",
+      "epoch 12 | loss: 0.52475 | val_0_logloss: 0.78567 |  0:01:25s\n",
+      "epoch 13 | loss: 0.51425 | val_0_logloss: 0.94661 |  0:01:31s\n",
+      "epoch 14 | loss: 0.50692 | val_0_logloss: 0.60853 |  0:01:37s\n",
+      "epoch 15 | loss: 0.49592 | val_0_logloss: 0.68177 |  0:01:43s\n",
+      "epoch 16 | loss: 0.48996 | val_0_logloss: 0.67585 |  0:01:49s\n",
+      "epoch 17 | loss: 0.48759 | val_0_logloss: 0.83575 |  0:01:55s\n",
+      "epoch 18 | loss: 0.4836  | val_0_logloss: 0.67883 |  0:02:01s\n",
+      "epoch 19 | loss: 0.47922 | val_0_logloss: 0.75653 |  0:02:07s\n",
+      "epoch 20 | loss: 0.4696  | val_0_logloss: 0.51853 |  0:02:13s\n",
+      "epoch 21 | loss: 0.4643  | val_0_logloss: 0.75528 |  0:02:19s\n",
+      "epoch 22 | loss: 0.46498 | val_0_logloss: 0.57674 |  0:02:25s\n",
+      "epoch 23 | loss: 0.46872 | val_0_logloss: 0.65051 |  0:02:31s\n",
+      "epoch 24 | loss: 0.47037 | val_0_logloss: 0.48869 |  0:02:37s\n",
+      "epoch 25 | loss: 0.45894 | val_0_logloss: 0.80733 |  0:02:44s\n",
+      "epoch 26 | loss: 0.46371 | val_0_logloss: 0.55573 |  0:02:50s\n",
+      "epoch 27 | loss: 0.46611 | val_0_logloss: 0.71304 |  0:02:56s\n",
+      "epoch 28 | loss: 0.46428 | val_0_logloss: 0.66231 |  0:03:02s\n",
+      "epoch 29 | loss: 0.45639 | val_0_logloss: 0.65777 |  0:03:08s\n",
+      "epoch 30 | loss: 0.46621 | val_0_logloss: 0.5017  |  0:03:14s\n",
+      "epoch 31 | loss: 0.45504 | val_0_logloss: 0.9653  |  0:03:21s\n",
+      "epoch 32 | loss: 0.46159 | val_0_logloss: 0.56994 |  0:03:27s\n",
+      "epoch 33 | loss: 0.45535 | val_0_logloss: 0.78905 |  0:03:33s\n",
+      "epoch 34 | loss: 0.45839 | val_0_logloss: 1.51706 |  0:03:39s\n",
+      "epoch 35 | loss: 0.45169 | val_0_logloss: 0.90987 |  0:03:46s\n"
      ]
     }
    ],
