--- a/Codes/Parameter_Tuning.ipynb
+++ b/Codes/Parameter_Tuning.ipynb
@@ -88,7 +88,14 @@
       "epoch 32 | loss: 0.46159 | val_0_logloss: 0.56994 |  0:03:27s\n",
       "epoch 33 | loss: 0.45535 | val_0_logloss: 0.78905 |  0:03:33s\n",
       "epoch 34 | loss: 0.45839 | val_0_logloss: 1.51706 |  0:03:39s\n",
-      "epoch 35 | loss: 0.45169 | val_0_logloss: 0.90987 |  0:03:46s\n"
+      "epoch 35 | loss: 0.45169 | val_0_logloss: 0.90987 |  0:03:46s\n",
+      "epoch 36 | loss: 0.44872 | val_0_logloss: 0.76405 |  0:03:53s\n",
+      "epoch 37 | loss: 0.45245 | val_0_logloss: 0.51068 |  0:04:00s\n",
+      "epoch 38 | loss: 0.45876 | val_0_logloss: 0.54015 |  0:04:06s\n",
+      "epoch 39 | loss: 0.45385 | val_0_logloss: 0.85248 |  0:04:13s\n",
+      "\n",
+      "Early stopping occurred at epoch 39 with best_epoch = 24 and best_val_0_logloss = 0.48869\n",
+      "Tabnet Accuracy: 0.8114647697180539\n"
      ]
     }
    ],
@@ -120,13 +127,13 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-02-01T06:59:25.853747200Z",
      "start_time": "2024-02-01T06:55:08.086640Z"
     }
    },
    "id": "2d31116c1387cf5e",
-   "execution_count": null
+   "execution_count": 5
   },
   {
    "cell_type": "code",
