--- a/Codes/2_Postprocessing.ipynb
+++ b/Codes/2_Postprocessing.ipynb
@@ -19,12 +19,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:58:44.797809600Z",
-     "start_time": "2024-02-02T12:58:44.793807200Z"
+     "end_time": "2024-02-02T16:35:42.442965200Z",
+     "start_time": "2024-02-02T16:35:42.439339400Z"
     }
    },
    "id": "c2cbce1004346646",
-   "execution_count": 158
+   "execution_count": 90
   },
   {
    "cell_type": "code",
@@ -32,17 +32,17 @@
    "source": [
     "original = pd.read_csv('../Database/train.csv')\n",
     "original_defg = original.loc[original['대출등급'].isin(['D', 'E', 'F', 'G']), :]\n",
-    "abcd = True"
+    "abcd = False"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:59:12.537102600Z",
-     "start_time": "2024-02-02T12:59:12.348641900Z"
+     "end_time": "2024-02-02T16:35:42.830792800Z",
+     "start_time": "2024-02-02T16:35:42.641629100Z"
     }
    },
    "id": "9bcbf4af70620fbd",
-   "execution_count": 166
+   "execution_count": 91
   },
   {
    "cell_type": "code",
@@ -67,12 +67,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:59:13.629223300Z",
-     "start_time": "2024-02-02T12:59:12.543103900Z"
+     "end_time": "2024-02-02T16:35:42.839639500Z",
+     "start_time": "2024-02-02T16:35:42.832793500Z"
     }
    },
    "id": "453bf0e71da74202",
-   "execution_count": 167
+   "execution_count": 92
   },
   {
    "cell_type": "code",
@@ -97,22 +97,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:59:13.638190200Z",
-     "start_time": "2024-02-02T12:59:13.634187700Z"
+     "end_time": "2024-02-02T16:35:43.371664Z",
+     "start_time": "2024-02-02T16:35:42.961245Z"
     }
    },
    "id": "a03c903640b4a82d",
-   "execution_count": 168
+   "execution_count": 93
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 94,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:59:49.144013300Z",
-     "start_time": "2024-02-02T12:59:44.644392Z"
+     "end_time": "2024-02-02T16:35:44.781033500Z",
+     "start_time": "2024-02-02T16:35:43.377665300Z"
     }
    },
    "outputs": [
@@ -120,11 +120,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lightGBM Accuracy: 0.9045640999013448\n",
-      "XGBoost Accuracy: 0.8955812866711668\n",
-      "CatBoost Accuracy: 0.8966197621891064\n",
-      "Random Forest Accuracy: 0.88846772937328\n",
-      "Soft Voting Accuracy: 0.9053948803156966\n"
+      "lightGBM Accuracy: 0.8914879792072774\n",
+      "XGBoost Accuracy: 0.8893220706086203\n",
+      "CatBoost Accuracy: 0.8906216157678146\n",
+      "Random Forest Accuracy: 0.8906216157678146\n",
+      "Soft Voting Accuracy: 0.892570933506606\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
     "print(\"CatBoost Accuracy:\", accuracy_score(y_test, cat_result))\n",
     "print(\"Random Forest Accuracy:\", accuracy_score(y_test, rf_result))\n",
     "\n",
-    "average_proba = (proba2 + proba3) / 2\n",
+    "average_proba = (proba2+proba3)/2\n",
     "average_proba = (proba1 + average_proba) / 2\n",
     "soft_voting_result = np.argmax(average_proba, axis=1)\n",
     "print(\"Soft Voting Accuracy:\", accuracy_score(y_test, soft_voting_result))\n",
@@ -153,7 +153,7 @@
     "proba2 = xgb_model.predict(test_XG)\n",
     "proba3 = cat_model.predict_proba(test)\n",
     "\n",
-    "average_proba = (proba2 + proba3) / 2\n",
+    "average_proba = (proba2+proba3)/2\n",
     "average_proba = (proba1 + average_proba) / 2\n",
     "soft_voting_result = np.argmax(average_proba, axis=1)"
    ]
@@ -178,12 +178,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T12:02:11.387189100Z",
-     "start_time": "2024-02-02T12:02:11.248091500Z"
+     "end_time": "2024-02-02T16:35:44.786508600Z",
+     "start_time": "2024-02-02T16:35:44.784034900Z"
     }
    },
    "id": "69ed8fb122da0e75",
-   "execution_count": 137
+   "execution_count": 95
   },
   {
    "cell_type": "code",
@@ -195,7 +195,8 @@
     "    decoded_data = label_encoder.inverse_transform(soft_voting_result)\n",
     "\n",
     "    answer_abcd = pd.read_csv('../Files/answer_abcd.csv')\n",
-    "    answer_defg = pd.DataFrame(decoded_data)\n",
+    "    test['대출등급']=decoded_data\n",
+    "    answer_defg = pd.DataFrame(test['대출등급'])\n",
     "    answer_defg.reset_index(inplace=True)\n",
     "\n",
     "    answer = pd.concat([answer_defg, answer_abcd], axis=0)\n",
@@ -207,12 +208,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T11:38:54.109556100Z",
-     "start_time": "2024-02-02T11:38:54.075678600Z"
+     "end_time": "2024-02-02T16:35:44.901609800Z",
+     "start_time": "2024-02-02T16:35:44.790510Z"
     }
    },
    "id": "83c83e314b098235",
-   "execution_count": 113
+   "execution_count": 96
   }
  ],
  "metadata": {
