--- a/Codes/0_Preprocessing.ipynb
+++ b/Codes/0_Preprocessing.ipynb
@@ -5,17 +5,17 @@
    "outputs": [],
    "source": [
     "from scipy.stats import spearmanr\n",
+    "from sklearn.metrics import f1_score\n",
     "from matplotlib import pyplot as plt\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from scipy.stats import chi2_contingency\n",
     "from scipy.stats.mstats import winsorize\n",
-    "from sklearn.metrics import f1_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
     "\n",
     "import os\n",
     "import warnings\n",
@@ -182,7 +182,7 @@
    "source": [
     "if Discretization:\n",
     "    a_train = train['부채_대비_소득_비율']\n",
-    "    a_test = train['부채_대비_소득_비율']\n",
+    "    a_test = test['부채_대비_소득_비율']\n",
     "    bins = [-1, 0, 20, 35, 50, 100, 10000]\n",
     "    labels = [0, 1, 2, 3, 4, 5]\n",
     "    a_train = pd.cut(a_train, bins=bins, labels=labels)\n",
@@ -204,7 +204,7 @@
    "source": [
     "if Discretization:\n",
     "    b_train = train['총계좌수']\n",
-    "    b_test = train['총계좌수']\n",
+    "    b_test = test['총계좌수']\n",
     "    # b_train[b_train<7000]\n",
     "    bins = [0, 15, 30, 40, 50, 70, 100, 170]\n",
     "    labels = [0, 1, 2, 3, 4, 5, 6]\n",
@@ -227,7 +227,7 @@
    "source": [
     "if Discretization:\n",
     "    c_train = train['총연체금액']\n",
-    "    c_test = train['총연체금액']\n",
+    "    c_test = test['총연체금액']\n",
     "    bins = [0, 100.0, 15000.0, 30000.0, 45000.0, 60000.0, 80000.0]\n",
     "    labels = [0, 1, 2, 3, 4, 5]\n",
     "    c_train = pd.cut(c_train, bins=bins, labels=labels)\n",
