--- a/Postprocessing.ipynb
+++ b/Postprocessing.ipynb
@@ -15,12 +15,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T13:13:14.791998400Z",
-     "start_time": "2024-05-17T13:13:14.783810200Z"
+     "end_time": "2024-05-17T13:51:14.607444900Z",
+     "start_time": "2024-05-17T13:51:14.605361600Z"
     }
    },
    "id": "5a7365216f084516",
-   "execution_count": 104
+   "execution_count": 108
   },
   {
    "cell_type": "code",
@@ -32,12 +32,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T13:13:14.836810200Z",
-     "start_time": "2024-05-17T13:13:14.787945200Z"
+     "end_time": "2024-05-17T13:51:14.649501800Z",
+     "start_time": "2024-05-17T13:51:14.611601500Z"
     }
    },
    "id": "7c1006d94f65567c",
-   "execution_count": 105
+   "execution_count": 109
   },
   {
    "cell_type": "code",
@@ -47,18 +47,18 @@
     "name_list = ['None', 'SMOTE', 'Adasyn', 'KMeansSMOTE']\n",
     "best_dt = joblib.load(f'Files/dt_{name_list[i]}_model.pkl')\n",
     "best_lgb = joblib.load(f'Files/lgb_{name_list[i]}_model.pkl')\n",
-    "# best_xgb = joblib.load(f'Files/xgb_{name_list[i]}_model.pkl')\n",
-    "# best_cat = joblib.load(f'Files/cat_{name_list[i]}_model.pkl')"
+    "best_xgb = joblib.load(f'Files/xgb_{name_list[i]}_model.pkl')\n",
+    "best_cat = joblib.load(f'Files/cat_{name_list[i]}_model.pkl')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T13:13:14.875910400Z",
-     "start_time": "2024-05-17T13:13:14.836810200Z"
+     "end_time": "2024-05-17T13:51:14.856349600Z",
+     "start_time": "2024-05-17T13:51:14.651562100Z"
     }
    },
    "id": "2884b122625004ed",
-   "execution_count": 106
+   "execution_count": 110
   },
   {
    "cell_type": "code",
@@ -67,39 +67,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DT F1-Score:0.9490\n",
-      "lightGBM F1-Score:0.9429\n"
+      "[LightGBM] [Warning] Accuracy may be bad since you didn't explicitly set num_leaves OR 2^max_depth > num_leaves. (num_leaves=31).\n",
+      "DT F1-Score:0.9459\n",
+      "lightGBM F1-Score:0.9424\n",
+      "XGBoost F1-Score:0.9414\n",
+      "CatBoost F1-Score:0.9283\n",
+      "Soft Voting F1-Score:0.9478\n"
      ]
     }
    ],
    "source": [
     "proba1 = best_dt.predict_proba(test_in)\n",
     "proba2 = best_lgb.predict_proba(test_in)\n",
-    "# proba3 = best_xgb.predict_proba(test_in)\n",
-    "# proba4 = best_cat.predict_proba(test_in)\n",
-    "# average_proba = (proba1+proba2+proba3+proba4)/4\n",
+    "proba3 = best_xgb.predict_proba(test_in)\n",
+    "proba4 = best_cat.predict_proba(test_in)\n",
+    "average_proba = (proba1+proba2+proba3+proba4)/4\n",
     "\n",
     "dt_result = np.argmax(proba1, axis=1)\n",
     "lgb_result = np.argmax(proba2, axis=1)\n",
-    "# xgb_result = np.argmax(proba3, axis=1)\n",
-    "# cat_result = np.argmax(proba4, axis=1)\n",
-    "# soft_voting_result = np.argmax(average_proba, axis=1)\n",
+    "xgb_result = np.argmax(proba3, axis=1)\n",
+    "cat_result = np.argmax(proba4, axis=1)\n",
+    "soft_voting_result = np.argmax(average_proba, axis=1)\n",
     "\n",
     "print(f\"DT F1-Score:{f1_score(test_out, dt_result, average='micro'):.4f}\")\n",
     "print(f\"lightGBM F1-Score:{f1_score(test_out, lgb_result, average='micro'):.4f}\")\n",
-    "# print(f\"XGBoost F1-Score:{f1_score(test_out, xgb_result, average='micro'):.4f}\")\n",
-    "# print(f\"CatBoost F1-Score:{f1_score(test_out, cat_result, average='micro'):.4f}\")\n",
-    "# print(f\"Soft Voting F1-Score:{f1_score(test_out, soft_voting_result, average='micro'):.4f}\")"
+    "print(f\"XGBoost F1-Score:{f1_score(test_out, xgb_result, average='micro'):.4f}\")\n",
+    "print(f\"CatBoost F1-Score:{f1_score(test_out, cat_result, average='micro'):.4f}\")\n",
+    "print(f\"Soft Voting F1-Score:{f1_score(test_out, soft_voting_result, average='micro'):.4f}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-17T13:13:15.027538200Z",
-     "start_time": "2024-05-17T13:13:14.874908500Z"
+     "end_time": "2024-05-17T13:51:15.382756300Z",
+     "start_time": "2024-05-17T13:51:14.862545100Z"
     }
    },
    "id": "65e7e43f7919bdf6",
-   "execution_count": 107
+   "execution_count": 111
   }
  ],
  "metadata": {
